--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - pip install pytest pytest-cov
     - pip install codecov
 install:
-  - pip install .
+  - pip install -e .
   - pip install scipy
   - pip install numpy
   - pip install -r extended_requirements.txt
