--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
+  - "3.7"
 addons:
   apt:
     packages:
@@ -10,7 +11,7 @@ before_install:
     - pip install pytest pytest-cov
     - pip install codecov
 install:
-  - pip install -e .
+  - python setup.py install
   - pip install scipy
   - pip install numpy
   - pip install -r extended_requirements.txt
